Minor improvments. Apply PRs feedback